--- a/CheckTheThings.StarWars.WookepediaParser/CheckTheThings.StarWars.Wookieepedia.csproj
+++ b/CheckTheThings.StarWars.WookepediaParser/CheckTheThings.StarWars.Wookieepedia.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.16.0" />
+    <PackageReference Include="reset.editorconfig" Version="0.2.0" />
   </ItemGroup>
 
 </Project>
