--- a/src/CheckTheThings.StarWars.Wookieepedia/CheckTheThings.StarWars.Wookieepedia.csproj
+++ b/src/CheckTheThings.StarWars.Wookieepedia/CheckTheThings.StarWars.Wookieepedia.csproj
@@ -20,7 +20,10 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.17.1" />
-    <PackageReference Include="reset.editorconfig" Version="0.2.1" />
+    <PackageReference Include="reset.editorconfig" Version="0.2.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
