--- a/tests/CheckTheThings.StarWars.Wookieepedia.Tests/CheckTheThings.StarWars.Wookieepedia.Tests.csproj
+++ b/tests/CheckTheThings.StarWars.Wookieepedia.Tests/CheckTheThings.StarWars.Wookieepedia.Tests.csproj
@@ -26,7 +26,10 @@
     <PackageReference Include="AngleSharp" Version="0.17.1" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
-    <PackageReference Include="reset.editorconfig" Version="0.2.1" />
+    <PackageReference Include="reset.editorconfig" Version="0.2.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
