Skip items that error out

--- a/src/CheckTheThings.StarWars.Wookieepedia/CheckTheThings.StarWars.Wookieepedia.csproj
+++ b/src/CheckTheThings.StarWars.Wookieepedia/CheckTheThings.StarWars.Wookieepedia.csproj
@@ -8,6 +8,7 @@
     <Description>A data scraper for Wookieepedia</Description>
     <RepositoryUrl>https://github.com/CheckTheThings/wookieepedia-parser</RepositoryUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
